syntax = "proto3";

package messagePair;

// The greeting service definition.
service Connector {
  // Sends a greeting
  rpc Connect (ConnectRequest) returns (ConnectResponse) {}
}

// The request message containing the user's name.
message ConnectRequest {
  string ipAdd = 1;
  int32 port = 8080;
}

// The response message containing the greetings
message ConnectResponse {
  bool isSuccess = 1;
}